--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.4",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "expo-file-system": "~15.4.3",
+    "expo-media-library": "~15.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
