fixed finer details of the app

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native": "0.72.4",
     "react-native-web": "~0.19.6",
     "expo-file-system": "~15.4.3",
-    "expo-media-library": "~15.4.1"
+    "expo-media-library": "~15.4.1",
+    "expo-sharing": "~11.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
